# fasterface

./: Cargo.toml  FAST.md  NOTES.md  README.md
docs/: Main.draft.md  Main.md  Secrets.md
src/: app.rs  app_v1.rs  app_v2.rs  cli.rs  command.rs  context.rs  ext.rs  found.rs  fun_name.rs  funs.rs  i18n.rs  launch_command.rs  layout.rs  lib.rs  location_v1.rs  main.rs  package.rs  search_command.rs  todo.rs  traits.rs  tui.rs  types.rs  widgets.rs
src/ext/octocrab/: repository.rs
src/ext/ratatui/: rect.rs
src/funs/: fs.rs  github.rs
src/funs/github/: get_my_issues.rs
src/github/: list_my_issues.rs
src/i18n/: fun_i18n.rs
src/testing/: types.rs
src/traits/: fun.rs  type_name.rs  virtual_widget.rs
src/types/: virtual_ui.rs
src/types/ratatui/widgets/: tree.rs
src/types/virtual_ui/: container.rs  input.rs  text.rs
src/widgets/: node.rs
