[package]
name = "fasterface"
version = "0.1.0"
edition = "2021"
description = "A faster UI for common commands"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/fasterface"
repository = "https://github.com/DenisGorbachev/fasterface"
readme = "README.md"
keywords = ["utils"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.details]
title = "A faster UI for common commands"
tagline = ""
summary = ""
announcement = ""

[dependencies]
derive-new = { git = "https://github.com/OmarTawfik-forks/derive-new", branch = "impl-into" } # "0.6.0"
#derive_more = { version = "1.0.0", features = ["full"] }
#fmt-derive = "0.1.2"
#derive_builder = "0.20.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
#subtype = { path = "../subtype" }
serde = { version = "1.0.204", features = ["derive"], optional = true }
url = { version = "2.5.2", features = ["serde"] }
url-macro = { version = "0.1.6" }
clap = { version = "4.5.11", features = ["derive"] }
#save-load = { path = "../save-load", features = ["serde_json", "clap"] }
#itertools = { version = "0.13.0" }
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
stub-macro = { version = "0.1.3" }
#not-found-error = { version = "0.2.1" }
helpful = { path = "../helpful" }
semver = { version = "1.0.23", features = ["serde"] }
ratatui = { version = "0.28.0", features = ["crossterm"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = { version = "0.3.30" }

[package.metadata.cargo-machete]
ignored = ["stub_macro"]
