[package]
name = "fasterface"
version = "0.1.0"
edition = "2021"
description = "A faster UI for common commands"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/fasterface"
repository = "https://github.com/DenisGorbachev/fasterface"
readme = "README.md"
keywords = ["utils"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.details]
title = "A faster UI for common commands"
tagline = ""
summary = ""
announcement = ""

[dependencies]
clap = { version = "4.5.11", features = ["derive", "env"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
#fmt-derive = "0.1.2"
derive_builder = "0.20.0"
derive_more = { version = "1.0.0", features = ["full"] }
futures = { version = "0.3.30" }
futures-util = "0.3.30"
#not-found-error = { version = "0.2.1" }
helpful = { git = "https://github.com/DenisGorbachev/helpful" }
isolang = { version = "2.4.0" }
not-found-error = "0.2.3"
octocrab = { version = "0.39.0", features = ["stream"] }
ratatui = { version = "0.28.0", features = ["crossterm", "unstable-widget-ref"] }
semver = { version = "1.0.23", features = ["serde"] }
#subtype = { path = "../subtype" }
serde = { version = "1.0.204", features = ["derive"], optional = true }
standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
strum = { version = "0.26.3", features = ["strum_macros"] }
stub-macro = { version = "0.1.3" }
#save-load = { path = "../save-load", features = ["serde_json", "clap"] }
#itertools = { version = "0.13.0" }
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
url = { version = "2.5.2", features = ["serde"] }
url-macro = { version = "0.1.6" }

[package.metadata.cargo-machete]
ignored = ["stub_macro"]
